--- a/public/index.html
+++ b/public/index.html
@@ -19,11 +19,30 @@
         -webkit-box-sizing: border-box;
         -moz-box-sizing: border-box;
         box-sizing: border-box;
+        font-size: 62.5%;
+        /*font-size: 1.17vw;*/
+        overflow: -moz-scrollbars-vertical;
+        overflow-y: scroll;
       }
       *, *:before, *:after {
         -webkit-box-sizing: inherit;
         -moz-box-sizing: inherit;
         box-sizing: inherit;
+      }
+      svg {
+        display: block;
+        max-width: 100%
+      }
+      img {
+        max-width: 100%
+      }
+      body {
+        margin: 0;
+        padding: 0;
+        font-family: sans-serif;
+      }
+      table {
+        margin: auto;
       }
     </style>
   </head>
