created image component

--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,10 @@
         font-family: sans-serif;
       }
       table {
+        max-width:100%;
         margin: auto;
+        border-collapse: collapse;
+        border-spacing: 0;
       }
     </style>
   </head>
