made Image component

--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,8 @@
       }
       svg {
         display: block;
-        max-width: 100%
+        max-width: 100%;
+        margin: auto;
       }
       img {
         max-width: 100%
